--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 	"theme_color":"#6c9b01", //color principal de la cabezera navegado
 	"orientation" :"portrait",
 	"display":"standalone",
-	"start_url":"./index.php?utm_source=web_app_manifest",//cual va cargar al inicio
+	"start_url":"./?utm_source=web_app_manifest",//cual va cargar al inicio
 	"scope":"./",//nozed
 	"lang":"es-ES",//lenguaje
 	//"gcm_sender_id": "103953800507",
